# fastapi-playwright

./: .gitignore  README.md  pyproject.toml
src/fastapi_playwright/static/: style.css
src/fastapi_playwright/templates/: clicked.html  index.html
src/fastapi_vitest/: main.py
src/fastapi_vitest/templates/: index.html  settings.html
tests/: conftest.py  test_example.py
tests/frontend/: package.json
tests/frontend/src/: fastapi.test.js
